--- a/index.html
+++ b/index.html
@@ -12,17 +12,26 @@
                          <p style="padding: 15px"> 
                         <a href="http://localhost:8383/Moduli/js/index.html"> Auto Converte Link  </a>
                          <p style="padding: 15px"> 
-                        <a href="javascript:{jsmUrlToForm.attachForm('http://localhost:8383/Moduli/js/index.html','post')}"> Custom Converte Link in POST  </a>
+                        <a href="javascript:{jsmUrlToForm.attachForm('./index.html','post')}"> Custom Converte Link in POST  </a>
                          <p style="padding: 15px"> 
-                        <a href="javascript:{jsmUrlToForm.attachForm('http://localhost:8383/Moduli/js/index.html','get')}"> Custom Converte Link in GET  </a>
+                        <a href="javascript:{jsmUrlToForm.attachForm('./index.html','get')}"> Custom Converte Link in GET  </a>
                            <p style="padding: 15px"> 
-                        <a href="javascript:{jsmUrlToForm.attachForm('http://localhost:8383/Moduli/js/index.html')}"> Custom Converte Link in mode Default settyng[get-post]  </a>
+                        <a href="javascript:{jsmUrlToForm.attachForm('./index.html')}"> Custom Converte Link in mode Default settyng[get-post]  </a>
                          <p style="padding: 15px"> 
                         <a href="./"> Converte Link  </a>
                          <p style="padding: 15px"> 
                         <a href="#"> Excludes Conversion </a>
                          <p style="padding: 15px"> 
                         <a href="#"> Excludes Conversion </a>
+                         <p style="padding: 15px"> 
+                         <a href="http://localhost:8383/product/update/index.html"> Excludes Conversion  </a>
+                          <p style="padding: 15px"> 
+                         <a href="http://localhost:8383/contact/index.html"> Excludes Conversion  </a>
+                        <p style="padding: 15px"> 
+                         <a href="http://localhost:8383/Moduli/js/myimage.jpg"> Excludes Conversion  </a> 
+                        <p style="padding: 15px"> 
+                         <a href="http://localhost:8383/Moduli/js/myimage.png"> Excludes Conversion  </a> 
+                          
 		</p>
 		 
              
@@ -34,8 +43,8 @@
                         formMethod: 'get', //method form default <optional> 
                         tokenName: 'token', //Input field containing the token  <optional> 
                         tokenVal:'default', //token value <optional> 
-                        esclude:['product/update','/contact','etc/etc'], //excludes links that contain the corresponding statement <optional> 
-                        escludeExt:['.jpg','.png','.gif'] //excludes links that contain the corresponding statement <optional> 
+                        exclude:['product/update','/contact','etc/etc'], //excludes links that contain the corresponding statement <optional> 
+                        excludeExt:['.jpg','.png','.gif'] //excludes links that contain the corresponding statement <optional> 
                     });
                 }
             </script>
